# cb_finetune

./: .gitignore  data.jsonl  finetune.py  grp4_results.txt  latest_result.txt  main.py  model_finetune.py  pyproject.toml  result.txt  results.json  results2.json  results_grpo_4.jsonl  sample_callbreak_data.jsonl  structured_callbreak_data.jsonl  test_ai.jsonl  test_model.py  test_model_finetune.py
best-card-lora/: README.md
best-card-lora/checkpoint-1150/: rng_state.pth  scheduler.pt  trainer_state.json
best-card-lora/checkpoint-138/: rng_state.pth  scheduler.pt  trainer_state.json
best-card-lora/checkpoint-1725/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
best-card-lora/checkpoint-207/: rng_state.pth  scheduler.pt  trainer_state.json
best-card-lora/checkpoint-575/: rng_state.pth  scheduler.pt  trainer_state.json
best-card-lora/checkpoint-69/: rng_state.pth  scheduler.pt  trainer_state.json
callbreak_agent/: train_callbreak_base_model.py  train_callbreak_best_card_sft.py  train_callbreak_rl_grpo.py  train_callbreak_rl_strict_rules.py  train_callbreak_rules_sft.py  train_cb_t_card_reasons.py  train_lora_sft.py  utils.py
callbreak_agent/callbreak-rules-lora/: README.md
callbreak_agent/callbreak-rules-lora/checkpoint-25/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
data/: callbreak_rules.jsonl  callbreak_situations_v2.jsonl
results/: results3.jsonl  results_base.jsonl  results_grpo_4.jsonl
tests/: test_combined_model.py  test_model.py  test_model_accuracy.py  test_model_finetune.py  test_rl_grpo.py
(+12 files in other folders)
