[project]
name = "cb-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.34.4",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "trl>=0.22.2",
    "unsloth>=2025.8.10",
    "vllm>=0.10.2",
]
